module3-developer-control-plane/deploy-runner-container.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-runner-deployment
  labels:
    app: gitea-runner
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-runner
  template:
    metadata:
      labels:
        app: gitea-runner
    spec:
      volumes:       
      - name: docker-config
        configMap:
          name: docker-config
      containers:
      - name: gitea-runner
        image: vegardit/gitea-act-runner:dind-rootless-latest
        securityContext:
          privileged: true
        volumeMounts:
        - name: docker-config
          mountPath: data/.config/docker/daemon.json
          subPath: daemon.json
